--- a/resources/scss/home/_components/_card_clock.scss
+++ b/resources/scss/home/_components/_card_clock.scss
@@ -41,13 +41,11 @@
         border-left: 3px inset gray;
         margin: auto;
         overflow: clip;
-        font-size: 3em;
+        font-size: 3.5em;
         line-height: 1.5em;
         min-height: 50px;
         width: 80%;
-        letter-spacing: .1em;
+        letter-spacing: .075em;
         display: block;
-        text-wrap: nowrap;
-        overflow-wrap: normal;
     }
 }
