--- a/resources/scss/home/_components/_card_webrings.scss
+++ b/resources/scss/home/_components/_card_webrings.scss
@@ -111,9 +111,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-bottom: 1em;
-
-    & a {
+    padding: 1em 0;
+    span {
+      height: 31px;
+    }
+    a {
       padding: 0;
     }
   }
